<resources>
    <string name="app_name">또약</string>
    <string name="menu_settings">Settings</string>
    <string name="select">Select the two images to be compared</string>
    <string name="start">Start processing</string>
    <string name="title_activity_settings">Settings</string>
    <string name="orb">ORB</string>
    <string name="freak">FREAK</string>
    <string name="brisk">BRISK</string>
    <string name="brief">BRIEF</string>
    <string name="surf">SURF</string>
    <string name="sift">SIFT</string>


    <string name="close">CLOSE</string>
    <string name="confirm">CONFIRM</string>

    <string name="Apply">Apply Settings</string>
    <string name="min_dist">Hamming distance between matched descriptors(Lower the more similar):</string>
    <string name="min_dup">Minimum number of good matches to be recognized as a duplicate:</string>

    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="toast_unexpected_error">Unexpected error</string>
    <string name="file_provider_authorities">com.yalantis.ucrop.provider</string>
    <string name="lorem">
		Lorem ipsum dolor sit amet, consectetur adipiscing elit.
		In mollis est vitae erat laoreet consectetur. Mauris dui mauris,
		dictum vel egestas vel, porta sed ante. Phasellus congue viverra ipsum,
		in elementum arcu ultricies nec.Morbi tincidunt nisl lacinia, placerat nisi eget, luctus tortor.
		Morbi efficitur dictum leo, sit amet volutpat lorem sodales nec. Quisque et erat et turpis fringilla condimentum.
		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor vulputate libero vitae iaculis.
		Curabitur id blandit quam. Praesent massa ante, pulvinar vitae sagittis commodo, scelerisque porttitor eros.
		Mauris suscipit a enim nec congue. Mauris tristique cursus aliquet. Nunc quis hendrerit nunc. Praesent tristique tellus purus,
		a pretium ex gravida id. Cras laoreet malesuada nulla, at bibendum metus ultricies a. Fusce eu ornare arcu. Proin ut molestie est.
		Vestibulum quis vehicula erat. Nam sed tempus nibh. Sed tortor ante, maximus venenatis odio sed, ultricies maximus lectus.
		Aliquam sed volutpat ligula. Integer bibendum, magna ac lacinia suscipit,
		risus libero rutrum justo, sed tempus augue tellus eget est. Curabitur convallis augue nisl,
		id efficitur urna posuere faucibus. Ut sed egestas nulla, eu finibus metus. Nunc a arcu ante.
		Aenean ullamcorper dolor non condimentum congue. Aenean mauris nunc, pellentesque at placerat vitae,
		aliquet quis orci. Curabitur maximus augue ut bibendum sagittis.
	</string>

    <string name="search_hint">식별표시, 품명</string>
    <string name="pick_mark">마크를 선택해주세요.</string>

    <string name="shape_form">모양 : %s</string>
    <string name="color_form">색상 : %s</string>


    <string name="bottom_tab_guide">가이드</string>
    <string name="bottom_tab_ocr">문자 검색</string>
    <string name="bottom_tab_img">이미지 검색</string>
    <string name="bottom_tab_log">저장 목록</string>


    <string name="showcase_about_title">또약?</string>
    <string name="showcase_about">또약은 실시간으로 알약을 검색해주는 AI 카메라앱입니다.</string>
    <string name="showcase_permission">카메라 사용과 파일 쓰기에 관한 퍼미션을 허용해주세요.</string>

    <string name="showcase_ocr_title">문자 검색</string>
    <string name="showcase_ocr">문자 검색은 OCR로 알약의 문자를 추출해서 모양, 색상 정보와 더불어 빠르게 찾아냅니다.</string>

    <string name="showcase_keyword_title">키워드 검색</string>
    <string name="showcase_keyword">&#160;키워드 검색을 이용하면 OCR 인식이 부정확하거나 인색이 되지 않아도 직접 검색 할 수 있습니다.\n\n※ 키워드 검색시 앞뒤 정보를 다 입력하면 보다 빠르게 검색 할 수 있습니다.\n&#160;예) 앞 - SD 뒤 - AT, 검색 SD AT</string>

    <string name="showcase_image_title">이미지 검색</string>
    <string name="showcase_image">&#160;이미지 검색은 캡쳐한 이미지를 특징점을 추출해서 비교해서 비슷한 이미지를 찾아냅니다.\n\n※ 신뢰도는 다소 떨어지더라도 검색하기 어려운 알약 대상으로 비슷한 유형을 검색하고자 할때 사용합니다.</string>


    <string name="showcase_saved_list_title">저장 목록</string>
    <string name="showcase_saved_list">&#160;저장 목록은 알약 정보를 그룹으로 저장하여 별도로 관리하고 공유할 수 있습니다.\n\n※ 개별 알약 디테일 페이지에서 하트 아이콘을 누르면 저장 할 수 있습니다.</string>

    <string name="showcase_ocr_button">알약을 피사체로 두면 추출한 글자가 상단 텍스트 박스에 표현됩니다.\n\n* 검색하고자 하면 아래 버튼을 눌러줍니다.</string>
    <string name="showcase_image_button">알약을 피사체로 두면 추출한 이미지가 왼쪽 박스에 표현됩니다.\n\n* 알약의 정면으로 이미지를 추출하면 정확도를 높일 수 있습니다.\n\n* 검색하고자 하면 아래 버튼을 누릅니다.</string>






    <string name="guide_init_user">알약을 정면으로 잡아주세요.</string>
    <string name="close_end">다음부터 보지 않습니다.</string>
    <string name="initializing">잠시만 기다려주십시오.</string>
    <string name="clipboard_p_name">클립보드에 복사했습니다.</string>

    <string name="off_auto_classification">자동 분류 모드 OFF</string>

    <string name="off_auto_shape_classification">모양 자동 분류 OFF</string>
    <string name="off_auto_extract_color">색상 추출 OFF</string>

    <string name="delete_saved_list">
        <u>목록 삭제하기</u>
    </string>
</resources>