<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        app:layout_constraintVertical_bias="0.34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_gravity="center_horizontal"
            android:src="@drawable/about_img"
            android:layout_width="140dp"
            android:layout_marginBottom="@dimen/view_margin_spacing"
            android:layout_height="140dp"/>

        <TextView
            android:layout_marginTop="@dimen/view_margin_spacing"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/showcase_about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="@dimen/view_margin_spacing"
            android:id="@+id/warning_msg"
            android:textSize="28sp"
            android:textColor="@color/yak_ariant"

            android:text="@string/showcase_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/yak_pri"
        android:padding="22dp"
        android:orientation="vertical"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/progress_view"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:visibility="visible"
                style="?android:attr/progressBarStyleSmall"
                android:layout_marginBottom="@dimen/view_spacing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:gravity="center"

                android:text="@string/initializing"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/warning_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_warning"
                app:tint="@color/white"
                android:layout_margin="@dimen/view_spacing"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <TextView
                android:textSize="15sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/showcase_permission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:visibility="gone"
            android:id="@+id/getting_started_btn"
            android:layout_gravity="center_horizontal"
            android:text="시작하기"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:textSize="22sp"
            android:layout_width="300dp"
            android:layout_height="56dp"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>